@@ -2,6 +2,8 @@ Mahout Change Log
 
 Release 1.0 - unreleased
 
+  MAHOUT-1526: Ant file in examples (ssc)
+  
   MAHOUT-1530: Custom prompt and welcome message for the Spark Shell (ssc)
 
   MAHOUT-1521: lucene2seq - Error trying to load data from stored field (when non-indexed) (Terry Blankers via frankscholten)
